Changes for baconbird:

0.2:
	Added key to show user timeline.
	Made short help more contextual.

0.1 (2010-10-05):
	Initial release.